added html, fixed errors

--- a/yassin-portfolio/src/app/home/home.component.html
+++ b/yassin-portfolio/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="container py-5">
+    <h1 class="mb-3">Hi, ik ben Yassin 👋</h1>
+    <p>Creatieve informatica student met passie voor software & data.</p>
+    <div class="mt-4">
+      <a routerLink="/projecten" class="btn btn-primary me-2">Bekijk mijn projecten</a>
+      <a routerLink="/cv" class="btn btn-outline-primary">Download CV</a>
+    </div>
+  </div>
+  
