--- a/yassin-portfolio/src/styles.css
+++ b/yassin-portfolio/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+body.dark-mode {
+    background-color: #121212;
+    color: #f8f9fa;
+  }
+  
+  .navbar.dark-mode, .card.dark-mode {
+    background-color: #1e1e1e;
+    color: #f8f9fa;
+  }
+  
