--- a/yassin-portfolio/src/app/cv/cv.component.html
+++ b/yassin-portfolio/src/app/cv/cv.component.html
@@ -1,1 +1,5 @@
-<p>cv works!</p>
+<div class="container py-5">
+    <h2 class="mb-4">CV</h2>
+    <p>Download hier mijn CV in PDF-formaat:</p>
+    <a href="#" class="btn btn-outline-primary">Download CV (placeholder)</a>
+  </div>
