--- a/yassin-portfolio/src/app/home/home.component.html
+++ b/yassin-portfolio/src/app/home/home.component.html
@@ -3,7 +3,9 @@
     <p>Creatieve informatica student met passie voor software & data.</p>
     <div class="mt-4">
       <a routerLink="/projecten" class="btn btn-primary me-2">Bekijk mijn projecten</a>
-      <a routerLink="/cv" class="btn btn-outline-primary">Download CV</a>
+      <a routerLink="/home" class="btn btn-outline-primary">Home pagina</a> 
+      <a routerLink="/skills" class="btn btn-outline-primary">Skills</a>
+      <a routerLink="/cv" class="btn btn-outline-primary">Cv</a>
     </div>
   </div>
   
