--- a/yassin-portfolio/src/app/projects/projects.component.html
+++ b/yassin-portfolio/src/app/projects/projects.component.html
@@ -1,1 +1,36 @@
-<p>projects works!</p>
+<div class="container py-5">
+    <h2 class="mb-4">Projecten</h2>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">Zorgbalans ETL</h5>
+            <p class="card-text">Een ETL-project dat gegevens transformeert en opslaat in een zorgdatabase.</p>
+            <p><strong>Tech:</strong> Python, PostgreSQL, Docker</p>
+            <a href="https://github.com/yassi22/Zorgbalans_ETL" target="_blank" class="btn btn-outline-primary">Bekijk op GitHub</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">TEDx Data Analyse</h5>
+            <p class="card-text">Een data-analyseproject op TEDx video's met clustering en populariteitsscores.</p>
+            <p><strong>Tech:</strong> Python, Pandas, Scikit-learn</p>
+            <a href="https://github.com/yassi22/Tedx_data" target="_blank" class="btn btn-outline-primary">Bekijk op GitHub</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">Projecten Registratie App</h5>
+            <p class="card-text">Webapplicatie voor het registreren van projecten en deelnemers.</p>
+            <p><strong>Tech:</strong> Angular, Spring Boot, MySQL</p>
+            <a href="https://github.com/yassi22/project_register" target="_blank" class="btn btn-outline-primary">Bekijk op GitHub</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
