--- a/yassin-portfolio/src/app/skills/skills.component.html
+++ b/yassin-portfolio/src/app/skills/skills.component.html
@@ -1,1 +1,9 @@
-<p>skills works!</p>
+<div class="container py-5">
+    <h2 class="mb-4">Skills</h2>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">Probleemoplossend vermogen</li>
+      <li class="list-group-item">Communicatie</li>
+      <li class="list-group-item">Time management</li>
+      <li class="list-group-item">Project management</li>
+    </ul>
+  </div>
